--- a/derivatives.tex
+++ b/derivatives.tex
@@ -21,9 +21,9 @@
   e^x          & e^x                           & \qquad & e^u          & e^u u'\\
   a^x          & a^x\ln(a)                     & \qquad & a^u          & a^u\ln(a)u'\\
   x^x          & xx^{x-1}+x^x\ln(x)            & \qquad & u^v          & vu^{v-1}u'+u^v\ln(u) v'\\
-  \ln(x)       & \dfrac{1}{x}                  & \qquad & \ln u        & \dfrac{u'}{u}\\
+  \ln(x)       & \dfrac{1}{x}                  & \qquad & \ln(u)        & \dfrac{u'}{u}\\
   \log_a(x)    & \dfrac{1}{x}\log_a(e)         & \qquad & \log_a(u)    & \dfrac{u'}{u}\log_a(e)\\
-  \sin(x)      & \cos(x)                       & \qquad & \sen u       & \cos(u)u'\\
+  \sin(x)      & \cos(x)                       & \qquad & \sin(u)       & \cos(u)u'\\
   \cos(x)      & -\sin(x)                      & \qquad & \cos(u)      & -\sin(u)u'\\
   \tan(x)      & \dfrac{1}{\cos(x)^2}          & \qquad & \tan(u)      & \dfrac{u'}{\cos(u)^2}\\
   \cot(x)      & \dfrac{-1}{\sin(x)^2}         & \qquad & \cot(u)      & \dfrac{-u'}{\sin(u)^2}\\
