--- a/calculus-formulas-cheatsheet-uspceu.tex
+++ b/calculus-formulas-cheatsheet-uspceu.tex
@@ -2,7 +2,6 @@
 % Author: Alfredo Sánchez Alberca (asalber@ceu.es)
 \documentclass[a4paper, 10pt]{article}
 \usepackage[top=2.5cm, bottom=3cm, left=2cm, right=2cm, headsep=1.5cm]{geometry}
-%\usepackage{fontspec}
 \usepackage{amsmath}
 \usepackage{mathspec}
 \usepackage[sfdefault,semibold,Light]{FiraSans}
@@ -11,9 +10,16 @@
 \usepackage{tikz}
 \usepackage{graphicx}
 \usepackage[most]{tcolorbox}
+\usepackage[pdfauthor={Alfredo Sánchez Alberca}, pdftitle={Statistical formulas}, colorlinks=true]{hyperref}
+
+% HEADER AND FOOT
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\usepackage[pdfauthor={Alfredo Sánchez Alberca}, pdftitle={Statistical formulas}, colorlinks=true]{hyperref}
+\lhead{\includegraphics{img/logo-uspceu.pdf}} 
+\rhead{\url{http://aprendeconalf.es}}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\floatpagefraction}{.8}
+\renewcommand{\textfraction}{.1}
 
 % COLORS
 \usepackage{xcolor}
@@ -22,12 +28,12 @@
 \definecolor{color3}{RGB}{0,205,0} % Green
 \definecolor{color4}{RGB}{243,102,25} % Orange
 
-% Lists
+% LISTS
 \usepackage[shortlabels]{enumitem} % Customize lists
 %\setlist{nolistsep} % Reduce spacing between bullet points and numbered lists
 \setlist[description]{style=sameline,leftmargin=0cm}
 
-% Sections
+% SECTIONS
 \usepackage{titlesec}
 \titleformat{\section}
 {\color{color1}\normalfont\Huge\bfseries}
@@ -35,12 +41,6 @@
 \titleformat{\subsection}
 {\color{color1}\normalfont\Large\bfseries}
 {\color{color1}\thesubsection}{1em}{}
-
-\lhead{\includegraphics{img/logo-uspceu.pdf}} 
-\rhead{\url{http://aprendeconalf.es}}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\floatpagefraction}{.8}
-\renewcommand{\textfraction}{.1}
 
 \setlength{\columnsep}{1cm}
 
