--- a/calculus-formulas.tex
+++ b/calculus-formulas.tex
@@ -166,7 +166,7 @@
 				\[
 					F(x,y,y')=0
 				\]
-				\item[Initial value problem] \mbox{$f(t)=(x(t),y(t))$} at time $t=a$
+				\item[Initial value problem]
 				\[
 					\left\{
 					\begin{array}{ll}
@@ -175,11 +175,6 @@
 					\end{array}
 					\right.    
 				\]
-				\item[Separable differential equation] 
-			  \[
-			    y'g(y)=f(x)
-				\]
-				The solution is $\int g(y)\,dy = \int f(x)\,dx+C.$
 			\end{description}
 		\end{minipage}
 	\end{tcolorbox}
