--- a/derivatives.tex
+++ b/derivatives.tex
@@ -8,8 +8,9 @@
 \begin{tcolorbox}[hbox, title=Basic derivatives]
 \begin{minipage}{0.7\textwidth}
 \[
-  \def\arraystretch{2.2}
+  \def\arraystretch{2.15}
   \begin{array}{ccccc}
+  \multicolumn{2}{c}{\mbox{Simple functions}} & &  \multicolumn{2}{c}{\mbox{Composed functions}}\\
   y            & y'                            & \qquad & y            & y'\\
   \cmidrule(r){1-2}\cmidrule(l){4-5}
   k            & 0\\
@@ -55,7 +56,7 @@
       \[
         (fg)'(x) = f'(x)g(x) + f(x)g'(x)
       \]
-      \item[Sum]
+      \item[Quotient]
       \[
         \left(\frac{f(x)}{g(x)}\right)' = \frac{f'(x)g(x) - f(x)g'(x)}{g(x)^2}
       \]
