--- a/derivatives.tex
+++ b/derivatives.tex
@@ -66,7 +66,7 @@
       \]
       \item[Inverse]
       \[
-        f^{-1}'(x) = \frac{1}{f'(x)}
+        (f^{-1})'(x) = \frac{1}{f'(x)}
       \]
     \end{description}
   \end{minipage}
